k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-api
  template:
    metadata:
      labels:
        app: dummy-api
    spec:
      containers:
      - name: dummy-api
        image: image: <your-account-id>.dkr.ecr.<your-region>.amazonaws.com/streamlit-app:latest
        ports:
        - containerPort: 5000
