k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: image: <your-account-id>.dkr.ecr.<your-region>.amazonaws.com/streamlit-app:latest
        ports:
        - containerPort: 8501
