k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-api-service
spec:
  selector:
    app: dummy-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
